--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest safety bandit
+        pip install pytest safety bandit flake8
+
+    - name: Lint with flake8
+      run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
     - name: Security check - Safety
       run: safety check
@@ -36,6 +39,36 @@ jobs:
     - name: Run tests
       run: |
         pytest
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        load: true
+        tags: vardhan-flask:test
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: Scan Docker image for vulnerabilities
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: vardhan-flask:test
+        format: table
+        exit-code: 1
+        ignore-unfixed: true
+        vuln-type: os,library
+        severity: CRITICAL,HIGH
         
     - name: Set version tag
       if: startsWith(github.ref, 'refs/tags/v')
@@ -63,6 +96,7 @@ jobs:
       env:
         SSH_USER: milav
         DEPLOY_PATH: /home/milav/vardhan-flask
+        IMAGE_TAG: ${{ github.sha }}
       run: |
         # Make deploy.sh executable
         chmod +x deploy.sh
@@ -70,8 +104,8 @@ jobs:
         # Copy deploy script to server
         scp deploy.sh $SSH_USER@planetmilav.com:$DEPLOY_PATH/deploy.sh
         
-        # Run deploy script
-        ssh $SSH_USER@planetmilav.com "cd $DEPLOY_PATH && chmod +x deploy.sh && ./deploy.sh"
+        # Run deploy script with image tag
+        ssh $SSH_USER@planetmilav.com "cd $DEPLOY_PATH && IMAGE_TAG=$IMAGE_TAG chmod +x deploy.sh && ./deploy.sh"
 
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/v')
